--- a/styles.scss
+++ b/styles.scss
@@ -244,3 +244,14 @@ svg {
   // height: 50vh;
   // width: 50vh;
 }
+
+
+
+#mapInfo {
+  margin-top: 150px;
+  margin-left: 20px;
+  width: 90%;
+  // display: flex;
+  // justify-content: center;
+
+}
