Info update and slideshow
displays state name, their flags, the largest 10 cities in each state and a new slideshow boiler

--- a/styles.css
+++ b/styles.css
@@ -173,4 +173,13 @@ svg {
 #mapInfo button {
   color: #424642;
 }
+
+.infoTabs img {
+  float: left;
+  margin: 5px 10px;
+}
+
+.infoTabs li {
+  list-style: none;
+}
 /*# sourceMappingURL=styles.css.map */
